--- a/templates/auth/edit.html
+++ b/templates/auth/edit.html
@@ -5,9 +5,9 @@
 {% block content %}
 <div class="hero-body">
 <div class="container">
-      <div class="intro-columns">
-        <div class="intro-column is-video  is-flex-mobile">
-            <div class="bd-book-content is-flex-mobile">
+      <div class="columns">
+        <div class="column is-content is-offset-one-quarter">
+            <div class="bd-book-content">
                 <header class="block bd-book-header">
                     <strong class="tag is-info">个人信息</strong>
 
