--- a/templates/base.html
+++ b/templates/base.html
@@ -25,13 +25,13 @@
             <div class="container">
                 <div class="navbar-brand">
                     <a class="navbar-item" href="/#">人机交互项目项目展示中心</a>
-                    <div class="navbar-burger burger is-active" onclick="toggleClass(this, 'is-active')">
+                    <div class="navbar-burger burger" onclick="toggleClass(this, 'is-active')">
                         <span></span>
                         <span></span>
                         <span></span>
                     </div>
                 </div>
-                <div id="navMenuTransparent" class="navbar-menu is-active">
+                <div id="navMenuTransparent" class="navbar-menu">
                     <div class="navbar-start">
                         <div class="navbar-item has-dropdown is-hoverable">
                             <a class="navbar-link">
@@ -56,7 +56,7 @@
             </div>
         </nav>
 
-    <div class="main is-flex-mobile">
+    <div class="main">
         {% block content %}
 
         {% endblock %}
@@ -97,11 +97,11 @@
         </p>
 </div> -->
 </body>
-<footer id="footer">
+<footer >
   <div class="container">
     <div class="content has-text-centered">
         <p>
-            ©<a href="#">Web 共享项目</a> 由 <a href="#">Django </a> & <a href="https://bulma.io/">bulma</a> 驱动.
+            ©Web 共享项目 由 <a href="#">Django </a> & <a href="https://bulma.io/">bulma</a> 驱动.
         </p>
     </div>
   </div>
