--- a/templates/upload.html
+++ b/templates/upload.html
@@ -7,7 +7,7 @@
 <div class="hero-body">
 <div class="container">
       <div class="intro-columns">
-        <div class="intro-column is-video is-four-fifths">
+        <div class="column is-content is-5 is-desktop">
             <div class="bd-book-content">
                 <header class="block bd-book-header">
                     
@@ -58,7 +58,7 @@
                 </header>
             </div>
         </div>
-        <div class="is-content">
+        <div class="column is-5 is-content">
             <article class="message is-info">
               <div class="message-header">
                 Tips
@@ -67,20 +67,17 @@
               <div class="message-body">
                 <ul>
                     <li>
-                        1: 只要你保持项目名字一样,即可以多次上传,修/覆改项目文件
+                        1: 只要你保持项目名字一样,即可以多次上传,修/覆改项目文件</li>
                     <li>
-                        2: 暂不支持除了<strong class="tag has-text-danger">zip，rar</strong>以外的其他压缩包文件
+                        2: 暂不支持除了<strong class="tag has-text-danger">zip，rar</strong>以外的其他压缩包文件</li>
                     <li>
                         3: 压缩包内容 请尽可能地保持项目结构如下：<br>
-                        <img src="{% static 'show/img/demo.png' %}" class="img">
+                        <img src="{% static 'show/img/demo.png' %}" class="img"></li>
                      <li>
                         4: 主html文件请重命名为
-                            <strong class="tag has-text-danger">index.html</strong>
-                    </div>
-                    </li>
-
-                </ul>                        
-              </div>
+                            <strong class="tag has-text-danger">index.html</strong></li>
+                </ul>
+              </div>                       
             </article>        
         </div>
     </div>
