修复中文解压乱码，不再支持rar

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -69,7 +69,7 @@
                     <li>
                         1: 只要你保持项目名字一样,即可以多次上传,修/覆改项目文件</li>
                     <li>
-                        2: 暂不支持除了<strong class="tag has-text-danger">zip，rar</strong>以外的其他压缩包文件</li>
+                        2: 暂不支持除了<strong class="tag has-text-danger">zip</strong>以外的其他压缩包文件</li>
                     <li>
                         3: 压缩包内容 请尽可能地保持项目结构如下：<br>
                         <img src="{% static 'show/img/demo.png' %}" class="img"></li>
