--- a/static/show/css/main.css
+++ b/static/show/css/main.css
@@ -114,3 +114,11 @@
 .has-text-centered {
     text-align: center !important;
 }
+
+#footer{
+    position: fixed;;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    overflow : hidden
+}
