--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
                                     </div>
                                 <div class="control">
                                     <div class="tags has-addons">
-                                        <strong class="tag has-text-danger">zip/rar</strong>
+                                        <strong class="tag has-text-danger">zip</strong>
                                     </div>
                                 </div>
                                 <div class="control">
