--- a/templates/upload.html
+++ b/templates/upload.html
@@ -75,7 +75,9 @@
                         <img src="{% static 'show/img/demo.png' %}" class="img"></li>
                      <li>
                         4: 主html文件请重命名为
-                            <strong class="tag has-text-danger">index.html</strong></li>
+                            <strong class="tag has-text-info">index.html</strong></li>
+                    <li>
+                        2: 引用的文件请使用相对目录 即直接引用文件名 或是<strong class="tag has-text-info">./文件名</strong>  <strong class="tag has-text-danger">不要出现 '/文件名'</strong></li>
                 </ul>
               </div>                       
             </article>        
