--- a/templates/index.html
+++ b/templates/index.html
@@ -110,7 +110,7 @@
                      <p>
                          <strong>@{{i.name}}</strong> <small>{{ i.time }}</small> <small></small>
                          <br>
-                         向他的  <strong> <span class="tag is-info"> {{i.pname }} </span> </strong> 项目提交了一次修改
+                         向他的  <strong> <a class="tag is-info" href="/usr/share{{i.url}}" > {{i.pname }} </a> </strong> 项目提交了一次修改
                      </p>
                  </div>
                  <nav class="level is-mobile">
