--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
                                 用户
                             </a>
                             <div class="navbar-dropdown is-boxed">
+                                <a class="navbar-item" href="{% url "edit" %}"">通知</a>
                                 <a class="navbar-item" href="{% url "project" %}">我的项目</a>
                                 <a class="navbar-item" href="{% url "edit" %}"">个人资料</a>
                             </div>
