增加没有index，自动寻找其他html文件

--- a/templates/sall.html
+++ b/templates/sall.html
@@ -87,7 +87,7 @@
         ele.className = ele.className.replace(reg, "");
     }
     function deletet(ele){
-        var pid = ele.value;
+        let pid = ele.value;
         $.get("{% url 'delete' %}", {'pid':pid},
             function(data){
                 location.reload(true);
