--- a/templates/share.html
+++ b/templates/share.html
@@ -23,6 +23,6 @@
         <p>
             <!-- {% static 'show/share/' %}{{ name }}/{{ pname }}/index.html -->
         </p>
-        <iframe src=" {% static 'show/share/' %}{{ name }}/{{ pname }}/index.html" ></iframe>
+        <iframe src=" {% static 'show/share/' %}{{ name }}/{{ pname }}/{{ html }}" ></iframe>
     </body>
 </html>
