--- a/templates/upload.html
+++ b/templates/upload.html
@@ -66,18 +66,18 @@
               </div>
               <div class="message-body">
                 <ul>
-                    <li>
+                    <li class="li">
                         1: 只要你保持项目名字一样,即可以多次上传,修/覆改项目文件</li>
                     <li>
                         2: 暂不支持除了<strong class="tag has-text-danger">zip</strong>以外的其他压缩包文件</li>
                     <li>
-                        3: 压缩包内容 请尽可能地保持项目结构如下：<br>
-                        <img src="{% static 'show/img/demo.png' %}" class="img"></li>
-                     <li>
-                        4: 主html文件请重命名为
-                            <strong class="tag has-text-info">index.html</strong></li>
+                        3: 主html文件请重命名为
+                            <strong class="tag has-text-info">index.html</strong>如果没有index.html 会自动寻找项目中第一个html文件</li>
                     <li>
-                        2: 引用的文件请使用相对目录 即直接引用文件名 或是<strong class="tag has-text-info">./文件名</strong>  <strong class="tag has-text-danger">不要出现 '/文件名'</strong></li>
+                        4: 引用的文件请使用相对目录 即直接引用文件名 或是<strong class="tag has-text-info">./文件名</strong>  <strong class="tag has-text-danger">不要出现 '/文件名'</strong></li>
+                    <li>
+                        5: 压缩包内容 请尽可能地保持项目结构如下：<br>
+                        <img src="{% static 'show/img/demo.png' %}" class="img"></li>  
                 </ul>
               </div>                       
             </article>        
