--- a/templates/project.html
+++ b/templates/project.html
@@ -66,7 +66,7 @@
       <button class="delete" aria-label="close" onclick="unactive()"></button>
     </header>
     <section class="modal-card-body">
-        你确定要删除此项目吗?
+        你确定要删除此项目吗? 此操作不可逆！
     </section>
     <footer class="modal-card-foot">
       <button id="confirm" class="button is-success" value="" onclick="deletet(this)">确定</button>
