--- a/templates/base.html
+++ b/templates/base.html
@@ -31,9 +31,9 @@
                                 用户
                             </a>
                             <div class="navbar-dropdown is-boxed">
-                                <a class="navbar-item" href="{% url "edit" %}"">通知</a>
                                 <a class="navbar-item" href="{% url "project" %}">我的项目</a>
                                 <a class="navbar-item" href="{% url "edit" %}"">个人资料</a>
+                                <a class="navbar-item" href="#"">通知（Comming soon）</a>
                             </div>
                         </div>
                             <a class="navbar-item" href="/#" title="关于"><span class="bd-emoji">⭐️关于</span></a>
