--- a/static/show/css/main.css
+++ b/static/show/css/main.css
@@ -109,8 +109,8 @@
   animation: rainbow 8s ease infinite;
   background-image: linear-gradient(124deg, #ff470f, #ff3860, #b86bff, #3273dc);
   background-size: 800% 800%;
-}*/
-
+}
+*/
 .has-text-centered {
     text-align: center !important;
 }
