--- a/templates/base.html
+++ b/templates/base.html
@@ -32,11 +32,14 @@
                             </a>
                             <div class="navbar-dropdown is-boxed">
                                 <a class="navbar-item" href="{% url "project" %}">我的项目</a>
-                                <a class="navbar-item" href="{% url "edit" %}"">个人资料</a>
-                                <a class="navbar-item" href="#"">通知（Comming soon）</a>
+                                <a class="navbar-item" href="{% url "edit" %}">个人资料</a>
+                                <a class="navbar-item" href="#">通知（Comming soon）</a>
+                                {% if user.is_superuser %}
+                                    <a class="navbar-item" href="/admin">Admin</a>
+                                {% endif %}
                             </div>
                         </div>
-                            <a class="navbar-item" href="/#" title="关于"><span class="bd-emoji">⭐️关于</span></a>
+                            <a class="navbar-item" href="{% url 'about' %}" title="关于"><span class="bd-emoji">⭐️关于</span></a>
                         </div>
 
                     <div class="navbar-end">
